[Setting] 사이드바 색상 변경

--- a/assets/css/_colors/light-typography.scss
+++ b/assets/css/_colors/light-typography.scss
@@ -45,7 +45,7 @@
   /* Sidebar */
 
   --sidebar-bg: radial-gradient(
-    circle, #BDBDBD 0%, #BDBDBD 100%);
+    circle, #747474 0%, #747474 100%);
 
   --nav-cursor-color: #fcfcfc;
 
